tests/negative/AmbiguousSymbol.mjuvix
module AmbiguousSymbol;

  axiom A : Type;
  module M;
    axiom A : Type;
  end;
  open M;

  axiom B : A;
end;